# ppm-web-client

./: .gitignore  .gitmodules  Cargo.toml  README.md
.zed/: settings.json  tasks.json
src/: auth.rs  chat.rs  lib.rs
src/encryption/: models.rs
src/server/: models.rs
src/state/: mod.rs
src/storage/: models.rs
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: auth.rs  chat.rs  lib.rs
wasm/src/dev/: macros.rs  mod.rs
wasm/src/state/: mod.rs
www/: .prettierrc.json  bun.lockb  components.json  eslint.config.js  eslint.config.ts  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
www/src/: App.tsx  index.css  main.tsx  types.ts
www/src/components/: Banner.tsx  MessageInput.tsx  MessagesContainer.tsx  PersonStatus.tsx  SheetSidebar.tsx  Sidebar.tsx  UserButton.tsx  UserIcon.tsx  mode-toggle.tsx
www/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  label.tsx  scroll-area.tsx  separator.tsx  sheet.tsx  tabs.tsx  textarea.tsx
www/src/context/: appState.loader.ts  appState.provider.tsx  appState.tsx  createContext.ts  current.tsx  userData.tsx  webSocket.loader.ts  webSocket.provider.tsx  webSocket.tsx
www/src/context/banner/: loader.ts  provider.tsx
www/src/context/chat/: loader.ts  provider.tsx
www/src/pages/: Auth.tsx  Chat.tsx  Login.tsx  NotFound.tsx
www/src/providers/: theme-provider.tsx
www/src/types/: appState.ts
