[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#curve25519-dalek = "4.1.3"
ed25519-dalek = {version = "2.1.1", features = ["serde"]}
reqwest = "0.12.5"
sha2 = "0.10.8"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
x25519-dalek = {version="2.0.1", features=["static_secrets", "serde"]}
xeddsa = "1.0.2"
#bytes = "1.6.1"
##warp = "0.3.7"
serde = "1.0.204"
#serde_bytes = "0.11.15"
serde_json = "1.0.120"
#hkdf = "0.12.4"
#boring = "4.8.0"
rand = "0.8.5"
getrandom = {version = "0.2.15", features = ["js"]}
web-sys = {version = "0.3.69", features = ["MessageEvent", "WebSocket"]}
#js-sys = "0.3.69"
serde-wasm-bindgen = "0.6.5"
