[package]
name = "wasm-ppm"
description = "WASM module for the ppm web client"
repository = "https://github.com/cloudgazing/ppm-web-client"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.70"
ppm-models = { git = "https://github.com/cloudgazing/ppm-models.git", version = "0.3.0" }
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.128"
tsify-next = "0.5.4"
uuid = { version = "1.10.0", features = ["js", "serde", "v4"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3.70", features = ["console", "MessageEvent", "Storage", "WebSocket", "Window"] }
